SigmaCodebackup3rdSep/objects/Vendor_Incidence__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Source__c</fullName>
        <label>Contact Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Inquiry</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Damage_Quantity__c</fullName>
        <label>Accepted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Price__c</fullName>
        <label>Expected Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <formula>Quality_Rating__c + Response_Rating__c + Price_Rating__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Rating__c</fullName>
        <formula>(Expected_Price__c / Recived_Price__c )* $CustomMetadata.Vendor_Rating_System__mdt.Rating.Price_Rating__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Vendor_Ratings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quality_Rating__c</fullName>
        <formula>( Damage_Quantity__c / Total_Quantity__c )* $CustomMetadata.Vendor_Rating_System__mdt.Rating.Quality_Rating__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quality Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Equipment Design</fullName>
                </value>
                <value>
                    <fullName>Break Down</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Pricing Issue</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recived_Price__c</fullName>
        <label>Received Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Rating__c</fullName>
        <formula>Case(TEXT(Vendor_Responsiveness__c),
  &quot;Excellent&quot;, 25,
  &quot;Good&quot;, 20,
  &quot;Average&quot;, 12.5,
  &quot;Poor&quot;, 5,
  &quot;Not Satisfied&quot;, 0,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <label>Received Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Name1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <filterItems>
                <field>Account.Active__c</field>
                <operation>equals</operation>
                <value>Yes</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <valueField>Account.RecordType.Name</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Incidences</relationshipLabel>
        <relationshipName>Vendor_Incidences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Responsiveness__c</fullName>
        <label>Vendor Responsiveness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Not Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vendor Incidence</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vendor_Name1__c</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VR-{0000}</displayFormat>
        <label>Vendor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Incidences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Price_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Expected_Price__c  &gt; Recived_Price__c</errorConditionFormula>
        <errorMessage>Recieved Price should be greater than  or equal to  Expected Price</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProductQuantityValidation</fullName>
        <active>true</active>
        <errorConditionFormula>Damage_Quantity__c    &gt; Total_Quantity__c</errorConditionFormula>
        <errorMessage>Accepted Quantity Should be less than or  equal to Received Quantity</errorMessage>
    </validationRules>
</CustomObject>